RL: Added policy gradient and reinforce algo

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1825,38 +1825,13 @@
     "To solve this, we typically use **Policy-Based** approaches:\n",
     "1.  **Policy Gradient :**\n",
     "    * We train a single **Policy Network** that takes the **State** as input and outputs a **probability distribution** over actions (e.g., the mean and variance of a Gaussian) to sample from.\n",
-    "    * The network is updated directly using the gradient of the expected return, gradually shifting the distribution probabilities toward optimal actions.\n",
+    "    * The network is updated directly using the gradient of the expected return, gradually shifting the distribution probabilities toward optimal policy.\n",
     "\n",
     "2.  **Actor-Critic Method:**\n",
     "    * We train **two separate networks**:\n",
     "        * **Actor (Policy):** Takes State $\\to$ Outputs Action. It learns to select the best action directly.\n",
     "        * **Critic (Value):** Takes State (and sometimes Action) $\\to$ Outputs Value. It evaluates how good the Actor's selection was.\n",
     "    * The Critic provides a low-variance feedback signal (the \"score\") to train the Actor more efficiently than raw returns.\n",
-    "    \n",
-    "    \n",
-    "## Policy Gradient Method\n",
-    "Instead of learning value functions and deriving a policy from them, we can directly learn the policy as a parameterized function and optimize it. This method is called the policy gradient method. We represent the policy by $\\pi(a \\mid s, \\theta)$, which gives the probability of selecting action a given state $s$ and parameters $\\theta$. Here, $\\theta$ represents the learnable parameters of the policy.\n",
-    "\n",
-    "For $\\pi(a \\mid s, \\theta)$ to be a valid probability distribution, it must satisfy two constraints:\n",
-    "\n",
-    "1. Non-negativity: $\\pi(a \\mid s, \\theta) \\geq 0 \\quad \\forall a \\in \\mathcal{A}, , s \\in \\mathcal{S}$\n",
-    "\n",
-    "2. Normalization: $\\sum_a \\pi(a \\mid s, \\theta) = 1 \\quad \\forall s \\in \\mathcal{S}$\n",
-    "\n",
-    "These ensure that for every state, the probability of each action is non-negative and the total probability over all actions equals 1.\n",
-    "\n",
-    "To satisfy these constraints, we first define a real-valued function called the action preference, denoted as $h(s, a, \\theta)$. The action preference represents how desirable it is to take action a in state s under parameters $\\theta$. Since $h(s, a, \\theta)$ can take any real value, we convert it into a valid probability distribution using the softmax function, where\n",
-    "\n",
-    "$$\\pi(a \\mid s, \\theta) = \\frac{e^{h(s, a, \\theta)}}{\\sum_{a’} e^{h(s, a’, \\theta)}}$$\n",
-    "\n",
-    "After the softmax function, the probability distribution for all actiosn under every states is now valid.\n",
-    "\n",
-    "However, when dealing with infinite action space, it is impossbile to sum over all possible actions. Therefore, we can train the network to output a mean and a variance of the action space and sample from it.\n",
-    "\n",
-    "Typically, there are two formulations of policy gradient approach\n",
-    "1. Episodic formulation: Similar to most RL algorithms, the goal of this approach it to maximize the total discounted return from the start state by sampling multiple trajectories from it.\n",
-    "2. Average reward formulation: We deal with Maximize the average rate of reward per time step in the steady state. This approach is typically used when dealing with infinite horizon tasks.\n",
-    "\n",
     "\n",
     "## Policy Gradient Method\n",
     "\n",
@@ -1898,6 +1873,157 @@
     "        $$J(\\theta) = r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a|s, \\theta) \\mathbb{E}[R \\mid s, a]$$\n",
     "        *(Where $\\mu_{\\pi}(s)$ is the stationary distribution of states under policy $\\pi$.)*\n",
     "    * **Method:** We rely on the ergodic property of the MDP, optimizing the policy to shift the stationary distribution $\\mu(s)$ toward high-reward states.\n",
+    "\n",
+    "### Episodic Formulation in Policy Gradient Methods\n",
+    "The primary is to find an optimal policy $\\pi_\\theta$ that maximizes the expected cumulative reward. In the episodic formulation, this corresponds to **maximizing** the expected value over all possible states.\n",
+    "\n",
+    "We define the objective function $J(\\theta)$ as the expected value of the state-value function $v_{\\pi_\\theta}(s)$ averaged over the state distribution $p(s)$. Mathematically, this is expressed as:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = \\int_{S} p(s) v_{\\pi_\\theta}(s) \\, ds = \\mathbb{E}_{s \\sim p(s)} [v_{\\pi_\\theta}(s)]\n",
+    "$$\n",
+    "\n",
+    "* $p(s)$ is state distribution of the environment.\n",
+    "* $v_{\\pi_\\theta}(s)$ is the value of state $s$ and following policy $\\pi_\\theta$ thereafter.\n",
+    "\n",
+    "A key challenge here is that the true state distribution $p(s)$ is typically unknown. Therefore, we cannot calculate this integral analytically; instead, we must rely on sampling techniques to estimate it.\n",
+    "\n",
+    "To proceed, we first need a formal expression for the value of a single state $v_{\\pi_\\theta}(s_0)$. The value of a state is defined as the expected return obtained by following the policy $\\pi_\\theta$ starting from that state. Let a trajectory $\\tau$ be a sequence of states, actions, and rewards: $\\tau = (s_0, a_0, s_1, r_1, a_1, s_2, r_2, \\dots, s_T, r_T)$. The probability of a specific trajectory occurring depends on both the policy (agent) and the dynamics (environment):\n",
+    "\n",
+    "$$\n",
+    "P(\\tau|\\pi_\\theta) = p(s_0) \\prod_{t=0}^{T-1} \\pi_\\theta(a_t|s_t) p(s_{t+1}, r_{t+1}|s_t, a_t)\n",
+    "$$\n",
+    "\n",
+    "The value function $v_{\\pi_\\theta}(s_0)$ can be written as the integral of the return $G(\\tau)$ weighted by the probability of the trajectory occurring (integrate over all possbile trajectory starting from $s_0$), conditioned on starting at $s_0$:\n",
+    "\n",
+    "$$\n",
+    "v_{\\pi_\\theta}(s_0) = \\int_{\\tau(s_0)} G(\\tau(s_0)) \\left( \\prod_{t=0}^{T-1} \\pi_\\theta(a_t|s_t) p(s_{t+1}, r_{t+1}|s_t, a_t) \\right) \\, d\\tau\n",
+    "$$\n",
+    "\n",
+    "We can express this compactly as an expectation:\n",
+    "\n",
+    "$$\n",
+    "v_{\\pi_\\theta}(s_0) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} [G(\\tau) | s_0]\n",
+    "$$\n",
+    "\n",
+    "This equation is exactly the definition of the state value, which is the **expected return of all possible trajectories starting from that state**, and it depends on:\n",
+    "1.  **The Policy $\\pi_\\theta$:** Determines the probability of actions.\n",
+    "2.  **The Environment $p$:** Determines transition dynamics and rewards.\n",
+    "\n",
+    "Now we combine the state distribution $p(s)$ with the single-state value expression to reformulate the global objective $J(\\theta)$. Substituting the definition of $v_{\\pi_\\theta}(s)$ back into our original objective:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = \\int_{S} p(s) \\left( \\int_{\\tau(s)} G(\\tau) P(\\tau | s, \\pi_\\theta) \\, d\\tau \\right) \\, ds\n",
+    "$$\n",
+    "\n",
+    "By combining the integral over all states $p(s)$ and the integral over trajectories starting from those states, we can unify this into a single expectation over the distribution of all full trajectories induced by the policy:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = \\int_{\\tau} P(\\tau|\\pi_\\theta) G(\\tau) \\, d\\tau\n",
+    "$$\n",
+    "\n",
+    "Or in expectation notation:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} [G(\\tau)]\n",
+    "$$\n",
+    "\n",
+    "In other words, the objective is just to maximize the expected return over the distribution of all possible trajectory. Therefore, instead of finding the distribution $p(s)$, we can directly approximate the expected value by Monte Carlo sampling.\n",
+    "\n",
+    "\n",
+    "### Training Policy Networks: The REINFORCE Algorithm\n",
+    "To maximize $J(\\theta)$, we use **Gradient Ascent**. We need to compute the gradient of the objective with respect to the parameters, $\\nabla_\\theta J(\\theta)$.\n",
+    "\n",
+    "Starting with the integral definition:\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\nabla_\\theta \\int P(\\tau|\\theta) G(\\tau) \\, d\\tau\n",
+    "$$\n",
+    "\n",
+    "Assuming the return $G(\\tau)$ is a scalar value determined by the trajectory (and not directly differentiable with respect to $\\theta$), we move the gradient inside the integral:\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int \\nabla_\\theta P(\\tau|\\theta) G(\\tau) \\, d\\tau\n",
+    "$$\n",
+    "\n",
+    "We apply the identity $\\nabla_\\theta P(\\tau|\\theta) = P(\\tau|\\theta) \\nabla_\\theta \\log P(\\tau|\\theta)$. This allows us to re-introduce the probability term $P(\\tau|\\theta)$ required to form an expectation:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int P(\\tau|\\theta) \\nabla_\\theta \\log P(\\tau|\\theta) G(\\tau) \\, d\\tau = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} \\left[ \\nabla_\\theta \\log P(\\tau|\\theta) G(\\tau) \\right]\n",
+    "$$\n",
+    "\n",
+    "To compute $\\nabla_\\theta \\log P(\\tau|\\theta)$, we expand the probability of a trajectory. A trajectory's probability is the product of the start state probability, the policy probabilities, and the transition dynamics:\n",
+    "\n",
+    "$$\n",
+    "P(\\tau|\\theta) = p(s_0) \\prod_{t=0}^{T-1} \\pi_\\theta(a_t|s_t) p(s_{t+1}|s_t, a_t)\n",
+    "$$\n",
+    "\n",
+    "Taking the log of both sides converts the product into a sum:\n",
+    "$$\n",
+    "\\log P(\\tau|\\theta) = \\log p(s_0) + \\sum_{t=0}^{T-1} \\log \\pi_\\theta(a_t|s_t) + \\sum_{t=0}^{T-1} \\log p(s_{t+1}|s_t, a_t)\n",
+    "$$\n",
+    "\n",
+    "Now, we take the gradient with respect to $\\theta$:\n",
+    "1.  $\\nabla_\\theta \\log p(s_0) = 0$ (Initial state distribution does not depend on $\\theta$).\n",
+    "2.  $\\nabla_\\theta \\log p(s_{t+1}|s_t, a_t) = 0$ (Environment dynamics do not depend on $\\theta$).\n",
+    "3.  The only term that remains is the policy term.\n",
+    "\n",
+    "Thus, the gradient of the log-probability of the trajectory simplifies to just the sum of the gradients of the policy:\n",
+    "$$\n",
+    "\\nabla_\\theta \\log P(\\tau|\\theta) = \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t)\n",
+    "$$\n",
+    "\n",
+    "> This derivation is crucial because it allows us to optimize the policy without needing a model of the environment dynamics $p(s'|s,a)$, and $\\nabla_\\theta \\log \\pi_\\theta(a_t|s_t)$ can be computed easily using backpropgation.\n",
+    "\n",
+    "\n",
+    "Substituting the decomposed log-probability back into our expectation, we get the final expression for the Policy Gradient:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} \\left[ \\left( \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) \\right) G(\\tau) \\right]\n",
+    "$$\n",
+    "\n",
+    "This equation states that the gradient is the expected value of the **score function** ($\\nabla \\log \\pi$) scaled by the **return** $G(\\tau)$.\n",
+    "* If $G(\\tau)$ is high, we increase the probability of the actions taken in that trajectory.\n",
+    "* If $G(\\tau)$ is low, we decrease their probability.\n",
+    "\n",
+    "We cannot compute the expectation over all trajectories analytically. Instead, we approximate it using **Monte Carlo sampling**. If we sample a single trajectory $\\tau^{(i)}$ using the current policy $\\pi_\\theta$, we obtain an unbiased estimate of the gradient:\n",
+    "$$\n",
+    "\\hat{g} = \\left( \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) \\right) G(\\tau^{(i)})\n",
+    "$$\n",
+    "\n",
+    "Using this estimate, we update the parameters $\\theta$ using Stochastic Gradient Ascent (SGD):\n",
+    "$$\n",
+    "\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) G(\\tau^{(i)})\n",
+    "$$\n",
+    "\n",
+    "This specific implementation using a full trajectory return $G(\\tau)$ to estimate the value and updating via the score function is known as the **REINFORCE** algorithm.\n",
+    "\n",
+    "### REINFORCE (Monte Carlo Policy Gradient) Algorithm\n",
+    "1. Given:\n",
+    "   - Learning rate $\\alpha \\in (0, 1]$\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "   - A parameterized differentiable policy function $\\pi(a|s; \\theta)$ (Policy Network)\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - Weights $\\theta$ arbitrarily.\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - **Generate Episode:**\n",
+    "     - Initialize $S_0$.\n",
+    "     - Generate a full trajectory $\\tau = S_0, A_0, R_1, S_1, A_1, R_2, \\dots, S_{T-1}, A_{T-1}, R_T$ by following policy $\\pi(\\cdot|\\cdot; \\theta)$ until a terminal state $S_T$ is reached.\n",
+    "\n",
+    "   - **For each timestep $t = 0, 1, \\dots, T-1$:**\n",
+    "     - Calculate the return $G_t$ (cumulative discounted reward from step $t$ onwards):\n",
+    "       $$G_t = \\sum_{k=t+1}^{T} \\gamma^{k-t-1} R_k$$\n",
+    "\n",
+    "     - **Policy Update Step:**\n",
+    "       - Update weights $\\theta$ by performing a stochastic gradient ascent step. Note this step is performed for average single timestep in a trajectory.\n",
+    "         $$\\theta \\leftarrow \\theta + \\alpha G_t \\nabla_\\theta \\log \\pi_\\theta(A_t|S_t)$$\n",
+    "\n",
+    "4. Repeat until convergence:\n",
+    "   - Continue running episodes until policy $\\pi(a|s; \\theta)$ stabilizes or average return is maximized.\n",
+    "   \n",
+    "> In practice, we often batch the gradient of an entire trajectory to perform one update only with\n",
+    " $$\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) G(\\tau^{(i)})\n",
+    "$$ The gradient here is the sum of gradient of all timestep of the trajectory. The two approach is exactly equivalent of each other, and this one is more efficient.\n",
     "\n",
     "### Advanages of Policy Gradient Method\n",
     "The optimal policy for a given problem can be deterministic or stochastic. In value-based methods, improving the policy usually involves making it greedy or $\\epsilon$-greedy with respect to the current action-value estimates.\n",
