RL: Added policy gradient theorm

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1930,8 +1930,7 @@
     "\n",
     "In other words, the objective is just to maximize the expected return over the distribution of all possible trajectory. Therefore, instead of finding the distribution $p(s)$, we can directly approximate the expected value by Monte Carlo sampling.\n",
     "\n",
-    "\n",
-    "### Training Policy Networks: The REINFORCE Algorithm\n",
+    "### Training Policy Networks\n",
     "To maximize $J(\\theta)$, we use **Gradient Ascent**. We need to compute the gradient of the objective with respect to the parameters, $\\nabla_\\theta J(\\theta)$.\n",
     "\n",
     "Starting with the integral definition:\n",
@@ -1953,17 +1952,17 @@
     "To compute $\\nabla_\\theta \\log P(\\tau|\\theta)$, we expand the probability of a trajectory. A trajectory's probability is the product of the start state probability, the policy probabilities, and the transition dynamics:\n",
     "\n",
     "$$\n",
-    "P(\\tau|\\theta) = p(s_0) \\prod_{t=0}^{T-1} \\pi_\\theta(a_t|s_t) p(s_{t+1}|s_t, a_t)\n",
+    "P(\\tau|\\theta) = p(s_0) \\prod_{t=0}^{T-1} \\pi_\\theta(a_t|s_t) p(s_{t+1}, r_{t+1}|s_t, a_t)\n",
     "$$\n",
     "\n",
     "Taking the log of both sides converts the product into a sum:\n",
     "$$\n",
-    "\\log P(\\tau|\\theta) = \\log p(s_0) + \\sum_{t=0}^{T-1} \\log \\pi_\\theta(a_t|s_t) + \\sum_{t=0}^{T-1} \\log p(s_{t+1}|s_t, a_t)\n",
+    "\\log P(\\tau|\\theta) = \\log p(s_0) + \\sum_{t=0}^{T-1} \\log \\pi_\\theta(a_t|s_t) + \\sum_{t=0}^{T-1} \\log p(s_{t+1}, r_{t+1}|s_t, a_t)\n",
     "$$\n",
     "\n",
     "Now, we take the gradient with respect to $\\theta$:\n",
     "1.  $\\nabla_\\theta \\log p(s_0) = 0$ (Initial state distribution does not depend on $\\theta$).\n",
-    "2.  $\\nabla_\\theta \\log p(s_{t+1}|s_t, a_t) = 0$ (Environment dynamics do not depend on $\\theta$).\n",
+    "2.  $\\nabla_\\theta \\log p(s_{t+1}, r_{t+1}|s_t, a_t) = 0$ (Environment dynamics do not depend on $\\theta$).\n",
     "3.  The only term that remains is the policy term.\n",
     "\n",
     "Thus, the gradient of the log-probability of the trajectory simplifies to just the sum of the gradients of the policy:\n",
@@ -1971,7 +1970,7 @@
     "\\nabla_\\theta \\log P(\\tau|\\theta) = \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t)\n",
     "$$\n",
     "\n",
-    "> This derivation is crucial because it allows us to optimize the policy without needing a model of the environment dynamics $p(s'|s,a)$, and $\\nabla_\\theta \\log \\pi_\\theta(a_t|s_t)$ can be computed easily using backpropgation.\n",
+    "> This derivation is crucial because it allows us to optimize the policy without needing a model of the environment dynamics $p(s', r'|s,a)$, and $\\nabla_\\theta \\log \\pi_\\theta(a_t|s_t)$ can be computed easily using backpropgation.\n",
     "\n",
     "\n",
     "Substituting the decomposed log-probability back into our expectation, we get the final expression for the Policy Gradient:\n",
@@ -2015,7 +2014,7 @@
     "       $$G_t = \\sum_{k=t+1}^{T} \\gamma^{k-t-1} R_k$$\n",
     "\n",
     "     - **Policy Update Step:**\n",
-    "       - Update weights $\\theta$ by performing a stochastic gradient ascent step. Note this step is performed for average single timestep in a trajectory.\n",
+    "       - Update weights $\\theta$ by performing a stochastic gradient ascent step. Note this step is performed for every single timestep in a trajectory.\n",
     "         $$\\theta \\leftarrow \\theta + \\alpha G_t \\nabla_\\theta \\log \\pi_\\theta(A_t|S_t)$$\n",
     "\n",
     "4. Repeat until convergence:\n",
@@ -2024,6 +2023,160 @@
     "> In practice, we often batch the gradient of an entire trajectory to perform one update only with\n",
     " $$\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) G(\\tau^{(i)})\n",
     "$$ The gradient here is the sum of gradient of all timestep of the trajectory. The two approach is exactly equivalent of each other, and this one is more efficient.\n",
+    "\n",
+    "### Average Reward Formulation in Policy Gradient Methods\n",
+    "\n",
+    "### Policy Gradient Theorem\n",
+    "REINFORCE algorithm is a sample based implementation of the the general objective\n",
+    "\n",
+    "Objective function as to maximize the integral of state value over all state values. The gradient of this expectation is hard to compute as we do not have the true distribution over the state and we do not have the state value. \n",
+    "\n",
+    "REINFORCE estiamte the gradient of the objective by using samples of trajectory and its actual return\n",
+    "Comparison of the two formula\n",
+    "with large number of samples, the estimated gradient converges to the true gradient.\n",
+    "\n",
+    "However, we can generalize the gradient objective into computable format\n",
+    "Formula of the gradient objective\n",
+    "expand v(s) using q(s, a)\n",
+    "expand the gradient of v(s) using chain rule\n",
+    "one of the gradient with respect to the policy is easy to compute because we can do it using backpropogation\n",
+    "for the other term, expand gradient of q(s, a) using the bellman equation and simplify\n",
+    "\n",
+    "define the marginal distribution and give the final expression\n",
+    "\n",
+    "give the expression in the trajectory as t -> inf\n",
+    "\n",
+    "use log derivative trick to simply the expression and write the gradient objective in the expectation form.\n",
+    "\n",
+    "Final policy gradient theorm and expression\n",
+    "\n",
+    "\n",
+    "## The Policy Gradient Theorem\n",
+    "The REINFORCE algorithm is effectively a **sample-based implementation** of the theoretical Policy Gradient goal. The general objective in RL is to maximize the expected value of states under the policy's state distribution:\n",
+    "\n",
+    "$$\n",
+    "J(\\theta) = \\int_{\\mathcal{S}} p(s) v_{\\pi_\\theta}(s) \\, ds\n",
+    "$$\n",
+    "\n",
+    "Computing the gradient of this objective, $\\nabla_\\theta J(\\theta)$, analytically is intractable for two reasons:\n",
+    "1.  **Unknown State Distribution $p(s)$:** We do not know the true distribution of states reachable by the policy, nor how that distribution shifts ($\\nabla_\\theta p(s)$) when the policy changes.\n",
+    "2.  **Unknown Value Function $v_{\\pi_\\theta}(s)$:** We do not have the true value function; we only have samples of returns.\n",
+    "\n",
+    "REINFORCE bypasses these intractable integrals by using **Monte Carlo sampling**. It estimates the gradient using the **actual return** $G_t$ of a sampled trajectory as an unbiased estimator of $Q(s, a)$.\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) \\approx \\frac{1}{N} \\sum_{i=1}^N \\sum_{t=0}^{T} \\nabla_\\theta \\log \\pi(a_t|s_t) G_t\n",
+    "$$\n",
+    "\n",
+    "By the Law of Large Numbers, as the number of sampled trajectories $N \\to \\infty$, this estimate converges to the true gradient derived by the Policy Gradient Theorem. In practice, we use a few samples to compute a stochastic gradient for the update.\n",
+    "\n",
+    "To justify why algorithms like REINFORCE work, we must derive a computable form of the gradient that eliminates the dependency on the unknown environment dynamics.\n",
+    "\n",
+    "We start by expanding the value of a single state $v_\\pi(s)$ using the action-value function $q_\\pi(s,a)$:\n",
+    "\n",
+    "$$\n",
+    "v_\\pi(s) = \\int_{a} \\pi_\\theta(a|s) q_\\pi(s, a)\n",
+    "$$\n",
+    "\n",
+    "We take the gradient with respect to $\\theta$. Using the product rule, this splits into two terms:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta v_\\pi(s) = \\underbrace{\\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) q_\\pi(s, a)}_{\\text{Term 1: Policy Change}} + \\underbrace{\\int_{a} \\pi_\\theta(a|s) \\nabla_\\theta q_\\pi(s, a)}_{\\text{Term 2: Q-Value Change}}\n",
+    "$$\n",
+    "\n",
+    "* **Term 1 (Known):** Represents the change in value due to the policy selecting actions differently. This is computable (we know $\\pi_\\theta$) as long as we know $q$, and in practice, we estiamte $q$ with the actual return observed fromt the trajectory $G_t$.\n",
+    "* **Term 2 (Unknown):** Represents the change in the Q-values themselves as the policy changes future interactions, which is unknown.\n",
+    "\n",
+    "To handle Term 2, we expand $\\nabla_\\theta q_\\pi(s, a)$ using the Bellman equation:\n",
+    "$$q_\\pi(s, a) = \\int_{s', r} p(s', r | s, a) [r + \\gamma v_\\pi(s')]$$\n",
+    "\n",
+    "Taking the gradient:\n",
+    "$$\n",
+    "\\nabla_\\theta q_\\pi(s, a) = \\int_{s', r} \\underbrace{\\nabla_\\theta p(s', r | s, a)}_{0} [r + \\gamma v_\\pi(s')] + \\int_{s', r} p(s', r | s, a) \\underbrace{\\nabla_\\theta [r + \\gamma v_\\pi(s')]}_{\\gamma \\nabla_\\theta v_\\pi(s')}\n",
+    "$$\n",
+    "\n",
+    "*Note: The gradient of the environment dynamics $p(s'|s,a)$ and reward $r$ is **zero** because the environment does not depend on $\\theta$.*\n",
+    "\n",
+    "Substituting this back, we get a recursive relationship for the state-value gradient, so the gradient of the current state depends on the gradient of all possible next states:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta v_\\pi(s) = \\phi(s) + \\gamma \\int_{s'} P(s'|s, \\pi) \\nabla_\\theta v_\\pi(s')\n",
+    "$$\n",
+    "\n",
+    "Where $\\phi(s) = \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) q_\\pi(s, a)$.\n",
+    "\n",
+    "By repeatedly expanding the term $\\nabla_\\theta v_\\pi(s')$ (the gradient of the next state), we can express the gradient as an infinite sum over time steps:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta v_\\pi(s) = \\phi(s) + \\gamma \\int_{s'} P(s'|s) (\\phi(s') + \\gamma \\int_{s''} P(s''|s') \\nabla_\\theta v_\\pi(s''))\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta v_\\pi(s) = \\int_{x \\in \\mathcal{S}} \\sum_{k=0}^{\\infty} \\gamma^k P(s \\to x, k, \\pi) \\phi(x)\n",
+    "$$\n",
+    "\n",
+    "* $P(s \\to x, k, \\pi)$: The visitation probability. It asks, \"If I start at state $s$, what is the probability I will land in state $x$ exactly $k$ steps later?\"\n",
+    "\n",
+    "This equation states that the gradient of a state's value is the sum of $\\phi(x)$ for all future states $x$, weighted by how likely we are to visit them ($P$).\n",
+    "\n",
+    "We substitute this into the gradient of the original objective function, which is the average value over all possible start states $s_0$:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int_{s_0} p(s_0) \\nabla_\\theta v_\\pi(s_0) \\, ds_0\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int_{s_0} p(s_0) \\left( \\int_{x} \\sum_{k=0}^{\\infty} \\gamma^k P(s_0 \\to x, k, \\pi) \\phi(x) \\, dx \\right) ds_0\n",
+    "$$\n",
+    "\n",
+    "We rearrange the integrals to group terms by the **visited state** $x$ rather than the start state $s_0$. This is the crucial step:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int_{x} \\phi(x) \\underbrace{\\left( \\int_{s_0} p(s_0) \\sum_{k=0}^{\\infty} \\gamma^k P(s_0 \\to x, k, \\pi) \\, ds_0 \\right)}_{\\text{Total Discounted Visitation Density}} \\, dx\n",
+    "$$\n",
+    "\n",
+    "The term in the brackets represents the total discounted probability of visiting state $x$ (sometimes denoted $d^\\pi(s)$). We define the **normalized discounted state distribution** $p(s)$ as:\n",
+    "\n",
+    "$$\n",
+    "p(s) = \\frac{1}{1-\\gamma} \\int_{s_0} p(s_0) \\sum_{k=0}^{\\infty} \\gamma^k P(s_0 \\to s, k, \\pi) ds_0\n",
+    "$$\n",
+    "\n",
+    "Substituting this definition back into our equation (absorbing the constant $1-\\gamma$ into the proportionality or learning rate):\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) \\propto \\int_{x} p(x) \\phi(x) \\, dx\n",
+    "$$\n",
+    "\n",
+    "We expand $\\phi(x)$ using the log-derivative trick: $\\nabla \\pi = \\pi \\nabla \\ln \\pi$.\n",
+    "\n",
+    "$$\n",
+    "\\phi(x) = \\int_{a} \\nabla_\\theta \\pi_\\theta(a|x) q_\\pi(x, a) \\, da = \\mathbb{E}_{a \\sim \\pi} [\\nabla_\\theta \\ln \\pi_\\theta(a|x) q_\\pi(x, a)]\n",
+    "$$\n",
+    "\n",
+    "### Final Policy Gradient Theorem\n",
+    "Combining the state distribution $p(s)$ and the action expectation, we arrive at the final theorem:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\int_{\\mathcal{S}} p(s) \\left( \\int_{a} \\pi_\\theta(a|s) \\nabla_\\theta \\ln \\pi_\\theta(a|s) q_\\pi(s, a) \\, da \\right) ds\n",
+    "$$\n",
+    "\n",
+    "Written compactly as an expectation:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\mathbb{E}_{s \\sim p, a \\sim \\pi} \\left[ q^{\\pi_\\theta}(s, a) \\nabla_\\theta \\ln \\pi_\\theta(a|s) \\right]\n",
+    "$$\n",
+    "\n",
+    "**Significance:**\n",
+    "This theorem proves that we can compute the gradient of the performance $J(\\theta)$ **without** differentiating the state distribution or the environment dynamics. We only need:\n",
+    "1.  **$\\nabla \\ln \\pi$:** The gradient of the policy itself (computed via backpropagation).\n",
+    "2.  **$q(s,a)$:** The estimated return (obtained via interaction/sampling from the environment)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d28fae",
+   "metadata": {},
+   "source": [
     "\n",
     "### Advanages of Policy Gradient Method\n",
     "The optimal policy for a given problem can be deterministic or stochastic. In value-based methods, improving the policy usually involves making it greedy or $\\epsilon$-greedy with respect to the current action-value estimates.\n",
